# flowise-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
flowise_mcp/: __init__.py  client.py  models.py  server.py  utils.py
tests/: __init__.py  test_server.py
