[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowise-mcp"
version = "0.1.0"
description = "MCP server for connecting AI agents to Flowise instances"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Julian Di Rocco", email = "juliandirocco@gmail.com" }
]
keywords = [
    "mcp",
    "flowise",
    "ai",
    "agents",
    "llm",
    "chatbot",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/JuliDir/flowise-mcp"
Documentation = "https://github.com/JuliDir/flowise-mcp#readme"
Repository = "https://github.com/JuliDir/flowise-mcp"
Issues = "https://github.com/JuliDir/flowise-mcp/issues"

[project.scripts]
flowise-mcp = "flowise_mcp.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["flowise_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert (needed for tests)
]

[tool.ruff.lint.isort]
known-first-party = ["flowise_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
